<resources>
    <string name="eos_please_confirm_alert">请勿在EOS区块100%确认之前往账户转账</string>
    <string name="eos_eos">EOS</string>
    <string name="eos_btn_create_new_wallet">创建新钱包</string>
    <string name="eos_btn_restore_wallet">从备份恢复已有钱包</string>
    <string name="eos_tip_set_password">设置密码</string>
    <string name="eos_tip_create_wallet">创建钱包</string>
    <string name="eos_tip_repeat_pass">重复密码</string>
    <string name="eos_title_eos_username">EOS账户名</string>
    <string name="eos_tip_eos_username">由小写字母a-z与数字1-5组成，须为12个字符</string>
    <string name="eos_tip_input_password">最少8位，建议混合大小写字母、数字及符号</string>
    <string name="eos_tip_repeat_password">请再次输入您的密码</string>
    <string name="eos_tip_input_password_hint">请输入密码提示</string>
    <string name="eos_title_invitation_code">邀请码</string>
    <string name="eos_tip_input_inv_code">请输入邀请码</string>
    <string name="eos_btn_get_invitation">获取邀请码</string>
    <string name="eos_tip_agree">我已阅读并同意</string>
    <string name="eos_tip_terms_of_service"><u>服务协议</u></string>
    <string name="eos_title_password_hint">密码提示（可选）</string>
    <string name="eos_tip_password_hint">密码提示信息</string>
    <string name="eos_tip_password_input_part2">密码用于加密钱包等机密信息，请务必牢记或使用密码管理工具存储。Gemma不存储密码，无法提供密码找回服务</string>
    <string name="eos_tip_security_hint">密码用于加密钱包等机密信息，请务必牢记或使用密码管理工具存储。Gemma不储存密码，无法提供密码找回服务</string>
    <string name="eos_tab_wallet">钱包</string>
    <string name="eos_tab_transfer">转账</string>
    <string name="eos_tab_mine">我的</string>
    <string name="eos_tip_income">收入</string>
    <string name="eos_tip_payment">支出</string>
    <string name="eos_amount_income">+ %1$s</string>
    <string name="eos_amount_outcome">- %1$s</string>
    <string name="eos_title_transfer_status">交易状态</string>
    <string name="eos_title_transfer_id">交易号</string>
    <string name="eos_title_block_num">区块</string>
    <string name="eos_title_block_time">交易时间</string>
    <string name="eos_btn_see_in_explorer"><u>在区块链浏览器上查看</u></string>
    <string name="eos_title_receiver">收款人</string>
    <string name="eos_title_payer">转账人</string>
    <string name="eos_title_payer_account">付款账户</string>
    <string name="eos_title_fund">金额</string>
    <string name="eos_title_memo">备注</string>
    <string name="eos_title_memo_optional">备注（可选）</string>
    <string name="eos_btn_confirm_transfer">确认转账</string>
    <string name="eos_at_char">\ufeff@</string>
    <string name="eos_title_transfer">转账</string>
    <string name="eos_tip_transfer_trade_ing">转账处理中...</string>
    <string name="eos_tip_transfer_oprate_failed">转账失败</string>
    <string name="eos_tip_transfer_oprate_success">转账成功</string>
    <string name="eos_title_brief_info">概况</string>
    <string name="eos_title_used">已用 </string>
    <string name="eos_title_total_amount">总量 </string>
    <string name="eos_tip_operation">操作</string>
    <string name="eos_title_delegate_cpu">抵押CPU</string>
    <string name="eos_amount_delegate">输入需要抵押的EOS数量</string>
    <string name="eos_amount_undelegate">输入解除抵押的EOS数量</string>
    <string name="eos_title_delegate_net">抵押NET</string>
    <string name="eos_delegate">抵押</string>
    <string name="eos_title_resource_management">资源管理</string>
    <string name="eos_title_resource_detail">资源详情</string>
    <string name="eos_balance">余额</string>
    <string name="eos_quantity">数量</string>
    <string name="eos_amount_cpu_used">已用 %1$s ms</string>
    <string name="eos_amount_cpu_total">总量 %1$s ms</string>
    <string name="eos_amount_net_used">已用 %1$s KB</string>
    <string name="eos_amount_net_total">总量 %1$s KB</string>
    <string name="eos_amount_balance">%1$s 可用</string>
    <string name="eos_tip_balance_default">余额： -- EOS</string>
    <string name="eos_refund_detail">赎回详情</string>
    <string name="eos_btn_confirm_refund">确认解除抵押</string>
    <string name="eos_undelegate">解除抵押</string>
    <string name="eos_title_delegate_undelegate">抵押与赎回</string>
    <string name="eos_buy_sell_ram">买卖RAM</string>
    <string name="eos_buy_ram">买入</string>
    <string name="eos_sell_ram">卖出</string>
    <string name="eos_transaction">交易</string>
    <string name="eos_title_eos_quantity">交易数量(EOS)</string>
    <string name="eos_ram_quantity">交易数量(KB)</string>
    <string name="eos_available">可用</string>
    <string name="eos_price">价格</string>
    <string name="eos_input_ram_amount">输入RAM数量</string>
    <string name="eos_input_eos_amount">输入EOS数量</string>
    <string name="eos_amount_ram_approxi">预估可兑换 %1$s KB</string>
    <string name="eos_amount_eos_approxi">预估可兑换 %1$s EOS</string>
    <string name="eos_amount_available_eos">可用 %1$s</string>
    <string name="eos_amount_available_ram">可用 %1$s KB</string>
    <string name="eos_amount_ram">≈ %1$s EOS</string>
    <string name="eos_amount_ram_unit_price">≈ %1$s EOS/KB</string>
    <string name="eos_tip_quantity_approxi">预估可兑换</string>
    <string name="eos_import_wallet">导入钱包</string>
    <string name="eos_tip_input_key">请完整输入备份的私钥</string>
    <string name="eos_tip_input_key_part2">复制粘贴私钥至输入框，或通过扫描私钥生成的二维码输入</string>
    <string name="eos_tip_prikey_copied">私钥已复制，请在使用后及时清空系统剪贴板！</string>
    <string name="eos_btn_start_input">开始导入</string>
    <string name="eos_btn_complete_input">完成导入</string>
    <string name="eos_tip_look_around">请查看你的周围\n确保无人及摄像头的环境下进行备份</string>
    <string name="eos_look_around_import">请查看你的周围\n确保无人及摄像头的环境下开始导入</string>
    <string name="eos_back_up_wallet">备份钱包</string>
    <string name="eos_tip_back_safely">请在安全环境下备份\n备份期间可将手机调成飞行模式</string>
    <string name="eos_btn_show_mnemonic">明白了，显示助记词</string>
    <string name="eos_btn_show_PriKey">明白了，显示私钥</string>
    <string name="eos_btn_start_import">明白了，开始导入</string>
    <string name="eos_btn_backup_later">稍后备份</string>
    <string name="eos_tip_no_screenshot">请勿截图</string>
    <string name="eos_tip_no_screenshot_hint">系统截图在相册中可能被其他APP查看，备份前可开启飞行模式！</string>
    <string name="eos_tip_i_understand">我知道了</string>
    <string name="eos_safety_first">安全第一</string>
    <string name="eos_tip_safety_first">建议开启飞行模式，勿使用网络传输，以防黑客捕获到私钥。</string>
    <string name="eos_save_offline">离线储存</string>
    <string name="eos_tip_save_offline">可使用非联网的废旧手机作为冷存储，通过扫描二维码扫描获取私钥并存储。</string>
    <string name="eos_tip_encrypto_save">加密储存</string>
    <string name="eos_tip_encrypto_save_hint">若没有废旧的手机，也可复制私钥后使用加密软件或密码管理工具存储。请在存储后及时清空系统剪贴板。</string>
    <string name="eos_look_around">注意周围</string>
    <string name="eos_tip_look_around_hint">请在确保周围没有人及摄像头的环境下扫描二维码，以防二维码泄漏。</string>
    <string name="eos_tip_no_screenshot_part2">建议使用带有摄像头的离线设备扫描识别二维码以获取私钥，并将其以合理的方式存储。</string>
    <string name="eos_tip_show_QR">显示二维码</string>
    <string name="eos_new_password">新密码</string>
    <string name="eos_btn_confirm_change">确认修改</string>
    <string name="eos_title_change_pass">修改密码</string>
    <string name="eos_tip_pass_no_match">密码不一致</string>
    <string name="eos_total_assets">账户总资产</string>
    <string name="eos_available_balance">可用余额</string>
    <string name="eos_tip_redeem_ing">正在赎回</string>
    <string name="eos_transfer_records">收支记录</string>
    <string name="eos_get_cpu_net">管理CPU、NET</string>
    <string name="eos_CPU">CPU</string>
    <string name="eos_NET">NET</string>
    <string name="eos_RAM">RAM</string>
    <string name="eos_tip_loading_in">正在加载...</string>
    <string name="eos_tip_remaining_zero_zero_day_zero">剩余00天0</string>
    <string name="eos_tip_remaining_zero_zero_day">剩余00天</string>
    <string name="eos_unit_hours">小时</string>
    <string name="eos_tip_remain">剩余</string>
    <string name="eos_tip_day_zero">天0</string>
    <string name="eos_tip_day">天</string>
    <string name="eos_title_wallet">钱包</string>
    <string name="eos_wallet_name">钱包名称</string>
    <string
        name="eos_tip_use_eos_to_activate"><Data><![CDATA[为保证顺利创建账户，建议至少转<font color="#426bd4"> 2 EOS </font>
        ：账户将抵押 <font color = "#426bd4"> 0.1 EOS</font>
        作为CPU，<font color = "#426bd4"> 0.1 EOS</font> 作为NET，
        剩余<font color="#426bd4"> 1.8 EOS </font>将按现价购买RAM。]]></Data></string>
    <string name="eos_tip_give_out_pubkey">若你的好友对EOS创建账户机制十分了解，可给予其公钥。</string>
    <string name="eos_show_priKey">查看私钥</string>
    <string name="eos_tip_priKey_encrypted">私钥已加密存储，请输入之前设置的密码解锁查看</string>
    <string name="eos_copy">复制</string>
    <string name="eos_priKey_en">私钥 Private Key</string>
    <string name="eos_btn_backup_prikey">备份私钥</string>
    <string name="eos_tip_please_input_pass">请输入密码</string>
    <string name="eos_tip_wrong_password">密码错误请重新输入！</string>
    <string name="eos_title_manage_wallet">管理钱包</string>
    <string name="eos_btn_save">保存</string>
    <string name="eos_title_vote">投票</string>
    <string name="eos_tip_vote">节点投票</string>
    <string name="eos_amount_vote_num">%1$s/30</string>
    <string name="eos_vote_num_init">0/30</string>
    <string name="eos_nodes_selected_num">已选节点(%1$s/30)</string>
    <string name="eos_delegate_res">抵押资源</string>
    <string name="eos_zero_balance">0.0000 EOS</string>
    <string name="eos_tip_no_avail_votes">票数不足</string>
    <string name="eos_account_name">账户名</string>
    <string name="eos_remain_balance_zero">余额： 0.0000 EOS</string>
    <string name="eos_tip_transfer">输入转账金额，最多四位小数</string>
    <string name="eos_input_transfer_hint">输入转账备注</string>
    <string name="eos_show_remain_balance">余额： </string>
    <string name="eos_tip_cant_transfer_to_yourself">不能给自己的账户转账</string>
    <string name="eos_tip_balance_not_enough">可用余额不足</string>
    <string name="eos_tip_cant_input_zero">CPU和NET不能都为零</string>
    <string name="eos_title_transfer_record">收支记录</string>
    <string name="eos_title_transfer_detail">收支详情</string>
    <string name="eos_delegate_memo">Delegate %1$s EOS for CPU, %2$s EOS for NET</string>
    <string name="eos_unDelegate_memo">Undelegate %1$s EOS for CPU, %2$s EOS for NET</string>
    <string name="eos_switch_account">切换账户</string>
    <string name="eos_confirm_delegate">确认抵押</string>
    <string name="eos_input_pass_hint">请输入@%1$s的密码</string>
    <string name="eos_gemma_password_hint">Gemma不曾知晓钱包密码，每次操作需要输入密码以授权</string>
    <string name="eos_confirm_author">确认以授权</string>
    <string name="eos_confirm_buy">确认买入</string>
    <string name="eos_confirm_sell">确认卖出</string>
    <string name="eos_explanation">说明</string>
    <string name="eos_tip_buy_ram">Buy RAM</string>
    <string name="eos_tip_sell_ram">Sell RAM</string>
    <string name="eos_input_original_pass">请输入原密码</string>
    <string name="eos_verify_password">验证密码</string>
    <string name="eos_input_password">请输入@账户名的密码</string>
    <string name="eos_node_cybex">http://52.77.177.200:8888(eoscybex)</string>
    <string name="eos_node_starteos">http://api-mainnet.starteos.io</string>
    <string name="eos_node_eosnewyork">https://api.eosnewyork.io</string>
    <string name="eos_node_greymass">https://eos.greymass.com</string>
    <string name="eos_node_eosasia">https://api-direct.eosasia.one</string>
    <string name="eos_node_eosgravity">https://api-mainnet.eosgravity.com</string>
    <string name="eos_node_helloeos">https://api.helloeos.com.cn</string>
    <string name="eos_node_hkeos">https://api.hkeos.com</string>
    <string name="eos_node_eos42">https://nodes.eos42.io</string>
    <string name="eos_node_cypherglass">https://api.cypherglass.com</string>
    <string name="eos_node_test_beijing">http://47.75.154.248:50003(北京测试链)</string>
    <string name="eos_node_select">EOS节点</string>
    <string name="eos_alias_eos_cybex">EOS CYBEX</string>
    <string name="eos_alias_start_eos">START EOS</string>
    <string name="eos_alias_eos_newyork">EOS NEW YORK</string>
    <string name="eos_alias_eos_greymass">EOS GREYMASS</string>
    <string name="eos_alias_eos_asia">EOS ASIA</string>
    <string name="eos_alias_eos_gravity">EOS GRAVITY</string>
    <string name="eos_alias_hello_eos">HELLO EOS</string>
    <string name="eos_alias_hk_eos">HK EOS</string>
    <string name="eos_alias_eos_42">EOS 42</string>
    <string name="eos_key_saved">我已安全储存私钥</string>
</resources>