<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:background="@color/white"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/ui_navibar">

    </include>
    
    <ImageView
        android:background="@drawable/ic_security"
        android:layout_width="@dimen/dimen_54"
        android:layout_height="@dimen/dimen_54"
        android:layout_marginTop="@dimen/dimen_72"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40"
        android:text="@string/eos_back_up_wallet"
        android:textSize="@dimen/font_4.5"
        android:textColor="@color/darkSlateBlue"
        android:layout_marginTop="@dimen/dimen_10"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"/>

    <android.support.constraint.ConstraintLayout
        android:layout_marginTop="@dimen/dimen_20"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginEnd="@dimen/dimen_20"
        android:padding="@dimen/dimen_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_dot_one"
            android:layout_width="@dimen/dimen_10"
            android:layout_height="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_4"
            android:background="@drawable/ic_dot_red"
            android:scaleType="centerInside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_look_around_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10"
            android:text="@string/tip_back_wallet"
            app:layout_constraintStart_toEndOf="@id/iv_dot_one"
            app:layout_constraintEnd_toEndOf="parent"/>


        <ImageView
            android:id="@+id/iv_dot_two"
            android:layout_width="@dimen/dimen_10"
            android:layout_height="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_14"
            android:background="@drawable/ic_dot_red"
            android:scaleType="centerInside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_look_around_hint"/>

        <TextView
            android:id="@+id/tv_look_around_hint_two"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_40"
            android:layout_marginStart="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_14"
            android:text="@string/eos_tip_look_around"
            app:layout_constraintStart_toEndOf="@id/iv_dot_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_look_around_hint"/>

        <ImageView
            android:id="@+id/iv_dot_three"
            android:layout_width="@dimen/dimen_10"
            android:layout_height="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_14"
            android:background="@drawable/ic_dot_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_look_around_hint_two"/>

        <TextView
            android:id="@+id/tv_look_around_hint_three"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_40"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_marginStart="@dimen/dimen_10"
            android:text="@string/eos_tip_back_safely"
            app:layout_constraintTop_toBottomOf="@id/tv_look_around_hint_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_dot_two"
            />

        <Button
            android:id="@+id/show_priKey"
            style="@style/bt_long_in_linearLayout"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/eos_btn_show_PriKey"
            app:layout_constraintTop_toBottomOf="@id/tv_look_around_hint_three"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


    </android.support.constraint.ConstraintLayout>

</LinearLayout>