<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="#f9f9f9"
              android:orientation="vertical">

    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_mask_close"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:text="@string/eos_quantity"
                android:textColor="@color/eos_font_title"
                android:textSize="14sp"/>


            <TextView
                android:id="@+id/tv_ram_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:textColor="@color/darkSlateBlue"
                android:textSize="16sp"
                tools:text="0.0001 EOS"/>
        </RelativeLayout>

        <View
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            style="@style/common_divider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:text="@string/eos_explanation"
                android:textColor="@color/eos_font_title"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_explanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:textSize="@dimen/font_4"
                android:textColor="@color/darkSlateBlue"
                tools:text="buy ram"/>
        </RelativeLayout>

        <View
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            style="@style/common_divider"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm_sell_ram"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/eos_selector_btn_transfer"
        android:text="@string/eos_confirm_sell"
        android:textColor="@color/white"
        android:textSize="16sp"/>

</LinearLayout>